--- a/pokemon-game.html
+++ b/pokemon-game.html
@@ -14,27 +14,50 @@
         <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
     </head>
     <body>
-
+<div class="container">
         <audio id="my_audio" src="audio/battleMusic.mp3" loop="loop"></audio>
 
         <div id="logo"><img src="./img/pokelogo_50.png" alt="pokemon-font" border="0"></div>
+    <div class="winner"></div>
+
     <!-- card 1 -->
+    <div class = "row">
+
         <div class="player-one">
             <h3 id="hp-bar-one"></h3>
-            <div class="attk-btn"><button  id="C1attack1" class="btn">attack1</button></div>
-            <div id="card1"></div>
+            <div class="player1Damage"></div>
+            <div style="position:relative">
+                <div id="card1" style="position:absolute; top:1px"></div>
+            </div>
+
+            <div class="attk-btn rounded"><button disabled title="Click battle to play!" id="C1attack1" class="btn">attack1</button></div>
+
+
+
+
+            <!--<div style="position:relative">-->
+            <!--<div id="card1"></div>-->
+            <!--</div>-->
         </div>
     <!-- Battle Btn -->
         <div class="battle-img">
             <button id="battle-btn"><a href="#"><img id="battle" src="https://fontmeme.com/permalink/190312/f57c3bbd1d549e71b538687e024fd5cc.png" alt="pokemon-font" border="0"></a> </button>
         </div>
+        <div class="victory-dance"></div>
     <!-- card 2 -->
         <div class="player-two">
-            <h3 id="hp-bar-two"></h3>
-            <div class="attk-btn"><button id="C2attack1" class="btn"></button></div>
-            <div id="card2"></div>
+            <h3 id="hp-bar-two"></h3><div class="player2Damage"></div>
+            <div style="position:relative">
+                <div id="card2" style="position:absolute; top:1px"></div>
+            </div>
+            <div class="attk-btn rounded"><button id="C2attack1" class="btn"></button></div>
+
         </div>
-        <div class="winner"></div>
+    </div>
+    <button id="reset-btn" class="btn-success rounded">Play Again?</button>
+
+
+
 
 
 
@@ -49,7 +72,7 @@
         <!-- js links -->
         <script src="./js/pokemon-game.js"></script>
         <script src="./js/style.js"></script>
-
+</div>
     </body>
 
 </html>
