--- a/pokemon-game.html
+++ b/pokemon-game.html
@@ -24,10 +24,7 @@
                 <div class="player-one">
                     <h3 id="hp-bar-one"></h3>
                     <div class="player1Damage"></div>
-                    <div style="position:relative">
-                        <div><img class="poke-ball" src="./img/pokeBall.gif"/></div>
-                        <div id="card1" style="position:absolute; top:1px"></div>
-                    </div>
+                    <div id="card1"><img class="loading-pokeball" src="./img/pokeBall.gif" alt="loading"/></div>
                     <div class="attk-btn rounded"><button disabled title="Click battle to play!" id="C1attack1" class="btn">Attack</button></div>
                 </div>
             <!-- Battle Btn -->
@@ -37,11 +34,9 @@
                 <div class="victory-dance"></div>
             <!-- card 2 -->
                 <div class="player-two">
-                    <h3 id="hp-bar-two"></h3><div class="player2Damage"></div>
-                    <div style="position:relative">
-                        <div><img class="poke-ball" src="./img/pokeBall.gif"/></div>
-                        <div id="card2" style="position:absolute; top:1px"></div>
-                    </div>
+                    <h3 id="hp-bar-two"></h3>
+                    <div class="player2Damage"></div>
+                    <div id="card2"><img class="loading-pokeball" src="./img/pokeBall.gif" alt="loading"/></div>
                     <div class="attk-btn rounded"><button id="C2attack1" class="btn"></button></div>
                 </div>
             </div>
