--- a/index.html
+++ b/index.html
@@ -12,31 +12,33 @@
         <link rel="stylesheet" href="./css/index.css">
         <!-- google fonts -->
         <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
+        <!-- favicon -->
+        <link rel="icon" type="image/gif" href="./img/pokeball.gif">
     </head>
     <body>
         <div class="container">
-            <audio id="my_audio" src="audio/battleMusic.mp3" loop="loop"></audio>
+            <audio id="my_audio" src="audio/battlemusic.mp3" loop="loop"></audio>
 
             <div id="logo"><img src="./img/pokelogo_50.png" alt="pokemon-font" border="0"></div>
             <div class="winner"></div>
             <!-- card 1 -->
-            <div class = "row">
+            <div class="row">
                 <div class="player-one">
                     <h3 id="hp-bar-one"></h3>
                     <div class="player1Damage"></div>
-                    <div id="card1"><img class="loading-pokeball" src="./img/pokeBall.gif" alt="loading"/></div>
+                    <div id="card1"><img class="loading-pokeball" src="./img/pokeball.gif" alt="loading" /></div>
                     <div class="attk-btn rounded"><button disabled title="Click battle to play!" id="C1attack1" class="btn">Attack</button></div>
                 </div>
-            <!-- Battle Btn -->
+                <!-- Battle Btn -->
                 <div class="battle-img">
                     <button id="battle-btn"><a href="#"><img id="battle" src="https://fontmeme.com/permalink/190312/f57c3bbd1d549e71b538687e024fd5cc.png" alt="pokemon-font" border="0"></a> </button>
                 </div>
                 <div class="victory-dance"></div>
-            <!-- card 2 -->
+                <!-- card 2 -->
                 <div class="player-two">
                     <h3 id="hp-bar-two"></h3>
                     <div class="player2Damage"></div>
-                    <div id="card2"><img class="loading-pokeball" src="./img/pokeBall.gif" alt="loading"/></div>
+                    <div id="card2"><img class="loading-pokeball" src="./img/pokeball.gif" alt="loading" /></div>
                     <div class="attk-btn rounded"><button id="C2attack1" class="btn"></button></div>
                 </div>
             </div>
@@ -46,18 +48,14 @@
 
 
 
-
+        <!-- jQuery TESTETESTESTESTE, then Popper.js, then Bootstrap JS -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script
-                src="http://code.jquery.com/jquery-3.3.1.min.js"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
         <!-- js links -->
         <script src="./js/pokemon-game.js"></script>
-        <script src="./js/style.js"></script>
         <!--</div>-->
     </body>
 
